tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Breedsomenoblebe-AAAAAAAAAAAAAAAAAAAEXg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1118,
  "prerequisites": [
    1116
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Cross breeding common and cultivated bees can result in noble bees.\n\nNoble bees produce dripping combs every 3.8 minutes and honeydew. Note that production times are an approximation based on the bee's base production speed and the product's rarity. They do not reflect actual production time.\n\nYou've heard of a drunk beekeeper saying he has perfected a method of creating proven frames using Honeydew and a little magic. It might be worth your time to try experimenting yourself.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Breed some noble bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1116
  ],
  "rewards": [],
  "tasks": []
}
