tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Celebratory-AAAAAAAAAAAAAAAAAAAIzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2252,
  "prerequisites": [
    2180,
    2251
  ],
  "properties": {
    "auto_claim": false,
    "desc": "\nThis fun bee doesn't have any useful products, but it does produce a fun effect - constant fireworks! You can breed the effect into other lines, and the color of the fireworks will match the bee. Make the bees require sky and you can disable the effects by covering them up with a piston. Great for a celebration! Breed them from Austere and Excited.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Celebratory",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2180,
    2251
  ],
  "rewards": [],
  "tasks": []
}
