tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Certus-AAAAAAAAAAAAAAAAAAAIfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2173,
  "prerequisites": [
    2174,
    2175
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Certus Quartz bee. Hmm, does it have any breeding requirements? I can't see to remember. Maybe try a block of Certus Quartz? Breed it from Lapis and Hermitic.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Certus",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2174,
    2175
  ],
  "rewards": [],
  "tasks": []
}
