tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Charmed-AAAAAAAAAAAAAAAAAAAIqA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2216,
  "prerequisites": [
    2213,
    1116
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The power of three! Charmed bees are your next step up the magic bee tree. Breed them from Eldritch and Cultivated.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Charmed",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2213,
    1116
  ],
  "rewards": [],
  "tasks": []
}
