tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Chrome-AAAAAAAAAAAAAAAAAAAImg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2202,
  "prerequisites": [
    2201,
    2191
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Chrome, a necessary ingredient for Stainless Steel. Better to get it directly instead of having to deal with Rubies or Garnets. This bee will require a block of Chrome to breed. Breed them from Titanium and Ruby.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Chrome",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2201,
    2191
  ],
  "rewards": [],
  "tasks": []
}
