tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Decaying-AAAAAAAAAAAAAAAAAAABZw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 359,
  "prerequisites": [
    360
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Decaying Bee is not any more useful than the previous three. But now it should be clear, we are on our way to the Lutetium Bee!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Decaying",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    360
  ],
  "rewards": [],
  "tasks": []
}
